src/grid/css/grid.base.css
.gj-cursor-pointer
{
    cursor: pointer;
}

DIV.gj-grid-wrapper {
    margin: auto;
    position: relative;
    clear:both;
}

TABLE.gj-grid-table {
    margin: auto;    
    border-collapse: collapse;
    width: 100%;
    table-layout: fixed;
}

TABLE.gj-grid-table THEAD TH #checkAllBoxes
{
    margin: auto;
}

TABLE.gj-grid-table > tbody > tr > td
{
    cursor: default;
    overflow: hidden;
}

TABLE.gj-grid-table DIV
{
	vertical-align: middle;
	text-indent: 0;
    display: inline-block;
    white-space: pre-wrap;
    -ms-word-break: break-word;
    word-break: break-word;
}

DIV.gj-grid-wrapper DIV.gj-grid-loading-cover
{
    background: #BBBBBB;
    opacity: 0.5;
    position: absolute;
    vertical-align: middle;
}

DIV.gj-grid-wrapper DIV.gj-grid-loading-text
{
    position: absolute;
    font-weight: bold;
}

.gj-dirty {
    position: absolute;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 3px;
    border-color: #f00 transparent transparent #f00;
    padding: 0;
    overflow: hidden;
    vertical-align: top;
}

/* Base Theme */
.gj-grid-base-table {
    border: 1px solid #ddd;
    font-family: Helvetica,Arial,sans-serif;
    font-size: 14px;
}

.gj-grid-base-table thead tr th {
    background-color: #f5f5f5;
    border: 1px solid #ddd;
    padding: 2px 1px 2px 1px;
}

.gj-grid-base-table tbody tr:hover {
    background-color: #f5f5f5;
}

.gj-grid-base-table tbody tr td {
    border: 1px solid #ddd;
}

.gj-grid-base-table tbody tr td div[data-role="display"] {
    padding: 3px;
    overflow: hidden;
}

.gj-grid-base-table thead tr th div {
    padding: 3px;
}

.gj-grid-base-active {
    background-color: #f5f5f5;
}

.gj-content {
    border: 1px solid #999;
    background-color: #fff;
    border-radius: 6px;
    outline: 0;
}

